# ezsxf

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
data/D0LS004ZP21/: D0LS004Z.P21
data/D0LS004ZSFC/: D0LS004Z.SFC
src/: document.rs  features.rs  lib.rs  model.rs  parser.rs  python.rs  tests.rs
src/ezsxf/: __init__.py  __main__.py  _core.pyi  _drawing.py  _drawing_annotations.py  _drawing_builder.py  _drawing_geometry.py  _drawing_hatches.py  _drawing_style.py  _dxf.py  _p21_drawing.py  _plot.py
tests/: test_conversion.py  test_python_api.py
