[package]
name = "ezsxf"
version = "0.1.0"
edition = "2021"
description = "Fast SXF (P21/SFC) parser for Python powered by Rust (PyO3)"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nekanat/ezsxf"
homepage = "https://github.com/nekanat/ezsxf"
keywords = ["sxf", "p21", "sfc", "cad", "parser"]
categories = ["parser-implementations", "encoding"]
include = [
    "/Cargo.toml",
    "/Cargo.lock",
    "/pyproject.toml",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/src/*.rs",
    "/src/ezsxf/__init__.py",
    "/src/ezsxf/__main__.py",
    "/src/ezsxf/_core.pyi",
    "/src/ezsxf/py.typed",
    "/tests/test_python_api.py",
]

[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
encoding_rs = "0.8"
pyo3 = { version = "0.22.4", features = ["extension-module", "abi3-py39"] }
